# mock-backend

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  start_app.sh
alembic/: env.py
alembic/versions/: ee68bbe1c956_create_tables.py
src/: __init__.py  config.py  utils.py
src/api/: __init__.py
src/api/decorators/: __init__.py
src/api/routes/: __init__.py  demo_manager.py
src/db/: models.py
